# flowspect

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  action.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: action-selftest.yml  ci.yml  docs.yml  release.yml
adr/0001-bootstrap-decisions/: index.html
docs/: engine.md  github-action.md  importers.md  index.md  installation.md  ir.md  rules.md  usage.md  writing-rules.md
docs/adr/: 0001-bootstrap-decisions.md
engine/: index.html
examples/: README.md  flowspect-scan.yml
examples/safe-langflow/: customer-support-agent.json
examples/vulnerable-langflow/: customer-support-agent.json
github-action/: index.html
importers/: index.html
installation/: index.html
ir/: index.html
rules/: index.html
scripts/: gen_rule_catalog.py
search/: search_index.json
src/flowspect/: __init__.py  analysis.py  cli.py  engine.py  ir.py  scanner.py
src/flowspect/importers/: __init__.py  base.py  dify.py  flowise.py  langflow.py  n8n.py
src/flowspect/reporters/: __init__.py  json_report.py  sarif.py  terminal.py
src/flowspect/rules/: __init__.py  loader.py  schema.py
src/flowspect/rules/builtin/: 01-injection.yml  02-exfiltration.yml  03-ssrf-indirect.yml  04-structural.yml  05-misc-flows.yml  lethal-trifecta.yml  prompt-injection-exec.yml
tests/: test_analysis.py  test_cli.py  test_docs.py  test_engine.py  test_examples.py  test_importer_dify.py  test_importer_flowise.py  test_importer_langflow.py  test_importer_n8n.py  test_ir.py  test_rule_pack.py  test_rules_schema.py  test_scanner_reporters.py  test_smoke.py
tests/fixtures/dify/: research-bot.yml  research-workflow.yml
tests/fixtures/flowise/: agent-with-tools.json
tests/fixtures/langflow/: support-agent.json
tests/fixtures/n8n/: webhook-to-shell.json
usage/: index.html
writing-rules/: index.html
