[project]
name = "flowspect"
version = "0.1.0"
description = "Static security analysis for visual agent-builder graphs (Langflow, Dify, Flowise, n8n)"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Tom Price", email = "tomprice13@pm.me" }]
requires-python = ">=3.12"
keywords = ["security", "static-analysis", "taint-analysis", "langflow", "dify", "flowise", "n8n", "agents", "sarif"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Lonkins/flowspect"
Documentation = "https://lonkins.github.io/flowspect/"
Repository = "https://github.com/Lonkins/flowspect"
Issues = "https://github.com/Lonkins/flowspect/issues"
Changelog = "https://github.com/Lonkins/flowspect/blob/main/CHANGELOG.md"

[project.scripts]
flowspect = "flowspect.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.15",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flowspect"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # bugbear
    "S",        # bandit
    "C4",       # comprehensions
    "SIM",      # simplify
    "RET",      # return
    "PTH",      # pathlib
    "RUF",      # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert is the point of tests
    "N817",  # short acronym aliases (e.g. Capability as C) keep fixture tables readable
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=flowspect --cov-report=term-missing"

[tool.coverage.run]
source = ["src/flowspect"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = ["if TYPE_CHECKING:", "raise NotImplementedError"]
